# picacg

./: .gitignore  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  push_build.yml
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/provider/: comic_provider.dart  config_provider.dart  notice_provider.dart
lib/router/: route_config.dart
lib/utils/: path_util.dart  res_util.dart  toast_util.dart
lib/widgets/: indicator_widget.dart  responsive_widget.dart  tab_switch_widget.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: .gitignore  Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs
rust/src/api/error/: custom_error.rs
rust/src/api/reqs/: comic.rs  mod.rs  notice.rs  user.rs
rust/src/api/storage/: config.rs  mod.rs  net_data.rs  user_data.rs
rust/src/api/types/: action_entity.rs  ad_entity.rs  announcement_entity.rs  category_entity.rs  category_id.rs  comic_comment_entity.rs  comic_entity.rs  comic_ep_entity.rs  comic_ep_picture_entity.rs  comic_info_entity.rs  comic_search_entity.rs  comment_user_entity.rs  creator_entity.rs  image_entity.rs  init_entity.rs  login_entity.rs  mod.rs  page_data.rs  profile_entity.rs  recommend_entity.rs  sort.rs
rust/src/api/utils/: client.rs  crypto.rs  mod.rs  parse_json.rs
rust_builder/: pubspec.yaml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+24 files in other folders)
