[package]
name = "rust_lib_picacg"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.10.0", features = ["chrono", "dart-opaque"] }
reqwest = { version = "0.12.20", features = [
    "json",
    "rustls-tls",
    "rustls-tls-webpki-roots",
    "stream",
], default-features = false }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
